[gd_scene load_steps=8 format=3 uid="uid://b00j6qrn16hi1"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_l7vs4"]
[ext_resource type="Texture2D" uid="uid://cty774rdpa8wb" path="res://assets/environment/menu_background.png" id="2_bnhc8"]
[ext_resource type="PackedScene" uid="uid://rk3e8h1vtrdl" path="res://scenes/ui/title/title.tscn" id="2_w8t5g"]
[ext_resource type="PackedScene" uid="uid://dsvxv1mqlcnjy" path="res://scenes/ui/vignette.tscn" id="3_0kat5"]
[ext_resource type="Texture2D" uid="uid://bwdecxwhthxxb" path="res://assets/environment/two.png" id="3_lpvn1"]
[ext_resource type="PackedScene" uid="uid://vmshcyept0m3" path="res://scenes/ui/sound_button.tscn" id="3_y6npy"]
[ext_resource type="PackedScene" uid="uid://dgkroal1u72w4" path="res://scenes/ui/little_guy/little_guy.tscn" id="6_tkux4"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_l7vs4")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(1.3, 0.5, 0, 1)
self_modulate = Color(0.9, 0.9, 0.9, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bnhc8")
expand_mode = 1
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 601.0
offset_top = 77.0
offset_right = 1727.0
offset_bottom = 1074.0
texture = ExtResource("3_lpvn1")

[node name="Vignette" parent="." instance=ExtResource("3_0kat5")]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 550
theme_override_constants/margin_top = 300
theme_override_constants/margin_right = 550
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 350

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Title" parent="MarginContainer/VBoxContainer2/CenterContainer" instance=ExtResource("2_w8t5g")]
self_modulate = Color(0.9, 0.9, 0.9, 1)
scale = Vector2(0.6, 0.6)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 25

[node name="PlayButton" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer" instance=ExtResource("3_y6npy")]
self_modulate = Color(0.133333, 0.839216, 0.25098, 1)
layout_mode = 2
size_flags_vertical = 3
text = "play"

[node name="OptionsButton" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer" instance=ExtResource("3_y6npy")]
layout_mode = 2
size_flags_vertical = 3
text = "options"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25

[node name="ShopButton" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource("3_y6npy")]
self_modulate = Color(0.690196, 0.160784, 1, 1)
layout_mode = 2
size_flags_vertical = 3
text = "shop"

[node name="QuitButton" parent="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource("3_y6npy")]
self_modulate = Color(1, 0.160784, 0.172549, 1)
layout_mode = 2
size_flags_vertical = 3
text = "quit"

[node name="LittleGuy" parent="." instance=ExtResource("6_tkux4")]

[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/ShopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
